images and animation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/tour2.css">           
         <script src="js/jquery-1.11.3.min.js"></script>
     </head>
-    <body>
+    <body class="tour2">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -36,12 +36,7 @@
                     <a href="http://sciencehit.by">
                         <img src="img/Sciencehit_logo_ru.gif" alt="Sciencehit Logo">
                     </a>
-                    <ul class="header-socials">
-                        <li><a href="https://vk.com/event127710370" class="vk">vk</a></li>
-                        <li><a href="https://www.facebook.com/sciencehit" class="fb">fb</a></li>
-                        <li><a href="https://www.youtube.com/channel/UCQSTnmmw0p5WFtvmgDNq2Tw" class="yt">youtube</a></li>
-                        <li><a href="https://www.instagram.com/sciencehitby/" class="ig">instagram</a></li>
-                    </ul>
+                    
                 </div>
                 <a href="https://www.facebook.com/sciencehit/photos_stream" ><img src="img/open2tour.png" class="place-date" alt="Фоторепортаж открытия"> </a>
 
@@ -53,7 +48,7 @@
                 </div>
 
             </header>    
-            <div class="tour2 themes-container">
+            <div class="themes-container">
                 <h2 class="tour-title">2 ТУР  - 2.12.2016 Пятница 18.00</h2>
                 <!-- ************ speaker brief 1 ************ -->
                 <div class="speaker-wrapper pale_green">
@@ -70,27 +65,25 @@
                         </div>
                     </div>
                     <div class="floating-image">
-                        <img src="img/tour2/floating-image.png">
+                        <div class="image-element e1"></div>
                     </div>
                 </div>
 
                 <!-- ************ speaker brief 2 ************ -->
-                <div class="speaker-wrapper white">
+                <div class="speaker-wrapper white w01">
                     <div class="speaker-container">
                         <div class="speaker-brief">
                             <div class="brief-container">
                                 <h2 class="brief-name">Name Surnamesurname</h2>
                                 <p class="brief-field">Data-science</p>
-                                <img class="brief-photo" src="img/tour2/t2_speaker_1.jpg">
+                                <img class="brief-photo" src="img/tour2/t2_speaker_2.jpg">
                             </div>
                         </div>
                         <div class="speaker-video">
-                            <a href="#" class="video-link">«Футурология еды: бактерии»</a>
+                            <a href="#" class="video-link">«Трансплантация печени: как приживается орган?»</a>
                         </div>
                     </div>
-                    <div class="floating-image">
-                        <img src="img/tour2/floating-image.png">
-                    </div>
+                    <div class="floating-image"></div>
                 </div>
 
                 <!-- ************ speaker brief 3 ************ -->
@@ -100,7 +93,121 @@
                             <div class="brief-container">
                                 <h2 class="brief-name">Name Surnamesurname</h2>
                                 <p class="brief-field">Data-science</p>
-                                <img class="brief-photo" src="img/tour2/t2_speaker_1.jpg">
+                                <img class="brief-photo" src="img/tour2/t2_speaker_3.jpg">
+                            </div>
+                        </div>
+                        <div class="speaker-video">
+                            <a href="#" class="video-link">«Амилоиды – опасные белки внутри нас»</a>
+                        </div>
+                    </div>
+                    <div class="floating-image">
+                        <div class="image-element e1"></div>
+                    </div>
+                </div>
+
+                <!-- ************ speaker brief 4 ************ -->
+                <div class="speaker-wrapper white w02">
+                    <div class="speaker-container">
+                        <div class="speaker-brief">
+                            <div class="brief-container">
+                                <h2 class="brief-name">Name Surnamesurname</h2>
+                                <p class="brief-field">Data-science</p>
+                                <img class="brief-photo" src="img/tour2/t2_speaker_4.jpg">
+                            </div>
+                        </div>
+                        <div class="speaker-video">
+                            <a href="#" class="video-link">«Футурология еды: бактерии»</a>
+                        </div>
+                    </div>
+                    <div class="floating-image"></div>
+                </div>
+
+                <!-- ************ speaker brief 5 ************ -->
+                <div class="speaker-wrapper light-grey">
+                    <div class="speaker-container">
+                        <div class="speaker-brief">
+                            <div class="brief-container">
+                                <h2 class="brief-name">Name Surnamesurname</h2>
+                                <p class="brief-field">Data-science</p>
+                                <img class="brief-photo" src="img/tour2/t2_speaker_5.jpg">
+                            </div>
+                        </div>
+                        <div class="speaker-video">
+                            <a href="#" class="video-link">«Футурология еды: бактерии»</a>
+                        </div>
+                    </div>
+                    <div class="floating-image">
+                        <div class="image-element e1"></div>
+                    </div>
+                </div>
+
+                <!-- ************ speaker brief 6 ************ -->
+                <div class="speaker-wrapper white w03">
+                    <div class="speaker-container">
+                        <div class="speaker-brief">
+                            <div class="brief-container">
+                                <h2 class="brief-name">Name Surnamesurname</h2>
+                                <p class="brief-field">Data-science</p>
+                                <img class="brief-photo" src="img/tour2/t2_speaker_6.jpg">
+                            </div>
+                        </div>
+                        <div class="speaker-video">
+                            <a href="#" class="video-link">«Футурология еды: бактерии»</a>
+                        </div>
+                    </div>
+                    <div class="floating-image">
+                        <div class="image-element e1"></div>
+                        <div class="image-element e2"></div>
+                        <div class="image-element e3"></div>
+                    </div>
+                </div>
+
+                <!-- ************ speaker brief 7 ************ -->
+                <div class="speaker-wrapper creme">
+                    <div class="speaker-container">
+                        <div class="speaker-brief">
+                            <div class="brief-container">
+                                <h2 class="brief-name">Name Surnamesurname</h2>
+                                <p class="brief-field">Data-science</p>
+                                <img class="brief-photo" src="img/tour2/t2_speaker_7.jpg">
+                            </div>
+                        </div>
+                        <div class="speaker-video">
+                            <a href="#" class="video-link">«Футурология еды: бактерии»</a>
+                        </div>
+                    </div>
+                    <div class="floating-image">
+                        <div class="image-element e1"></div>
+                        <div class="image-element e2"></div>
+                        <div class="image-element e3"></div>
+                    </div>
+                </div>
+
+                <!-- ************ speaker brief 8 ************ -->
+                <div class="speaker-wrapper white w04">
+                    <div class="speaker-container">
+                        <div class="speaker-brief">
+                            <div class="brief-container">
+                                <h2 class="brief-name">Name Surnamesurname</h2>
+                                <p class="brief-field">Data-science</p>
+                                <img class="brief-photo" src="img/tour2/t2_speaker_8.jpg">
+                            </div>
+                        </div>
+                        <div class="speaker-video">
+                            <a href="#" class="video-link">«Футурология еды: бактерии»</a>
+                        </div>
+                    </div>
+                    <div class="floating-image"></div>
+                </div>
+
+                <!-- ************ speaker brief 9 ************ -->
+                <div class="speaker-wrapper red">
+                    <div class="speaker-container">
+                        <div class="speaker-brief">
+                            <div class="brief-container">
+                                <h2 class="brief-name">Name Surnamesurname</h2>
+                                <p class="brief-field">Data-science</p>
+                                <img class="brief-photo" src="img/tour2/t2_speaker_9.jpg">
                             </div>
                         </div>
                         <div class="speaker-video">
@@ -109,6 +216,26 @@
                     </div>
                     <div class="floating-image">
                         <img src="img/tour2/floating-image.png">
+                    </div>
+                </div>
+            </div>
+
+            <!-- ************ music-section ************ -->
+            <div class="trainers">
+                <h2 class="team-title">Музыка</h2>
+                <div class="trainers-container">
+                    <div class="trainer-info tn1">
+                        <a href="http://portmonetrio.com/" target="_blank" class="tn-link">
+                            <img src="img/tour2/port-mone.jpg" alt="Port Mone" class="tn-img">
+                        </a>
+                        <div class="tn-text">
+                            <h2><a href="http://portmonetrio.com/" target="_blank">PORT MONE</a></h2>
+                            <p>
+                                <i>Port Mone trio начинает работу над новым альбомом. Совместно с товариществом «Зеленая сеть» музыканты запускают оригинальный арт-проект, который призван привлечь внимание к развитию возобновляемой энергетики в Беларуси - они запишут альбом, используя только зеленую энергию.</i>
+                            </p>
+                            <p>Для записи нового альбома с рабочим названием Whisper («Шепот») мобильную звукозаписывающую студию вывезут сначала к ветроустановкам, а затем в солярный парк, где и будет сыграна и записана музыка.</p>
+                            
+                        </div>
                     </div>
                 </div>
             </div>
